Fix(css/caniuse): caniuse hover should remain visible (#1657)

--- a/js/core/css/caniuse.css
+++ b/js/core/css/caniuse.css
@@ -82,6 +82,6 @@ see https://github.com/Fyrd/caniuse/blob/master/CONTRIBUTING.md for stats */
 
 /* show rest of the browser versions */
 .caniuse-stats button:focus + ul,
-.caniuse-stats button:hover + ul {
+.caniuse-stats .caniuse-browser:hover > ul {
   display: block;
 }
